Fix Copy link spacing on post page (#189)

--- a/pages/post.module.scss
+++ b/pages/post.module.scss
@@ -133,8 +133,8 @@
     font-weight: 700;
     padding: 0;
 
-    span {
-      margin-right: 0.25rem !important;
+    img {
+      margin-right: 0.25rem;
     }
   }
 }
